Refactored ExpensesService tests